2013-09-19  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/export_csv.php: ACL fixes.
	
	* include/functions_crm.php: Now the functions
	"crm_get_all_leads" and "crm_get_all_contacts" don't
	filter any element to the admin.
	
	* include/functions_user.php: Error fix.
	
2013-09-19  Dario Rodriguez <dario@artica.es>

	* include/functions_user.php,
	operation/leads/lead_files.php,
	operation/common/download_file.php,
	operation/kb/browse_data.php,
	operation/workorders/wo_files.php,
	operation/companies/company_files.php: Unified all file
	download points (workorders, kb, companies and leads) in
	the same php scripts, with ACLs checks.

2013-09-19  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/contracts/contract_detail.php: ACL fix.
	
	* operation/leads/lead_activity.php: Now every user with
	read access to the lead, can add an activity.
	
	* operation/leads/lead_detail.php: Visual and ACL fixes.
	
2013-09-19  Dario Rodriguez <dario@artica.es>

	* index.php,
	operation/common/download_file.php: Added support to
	download external files.
	* operation/download/download_external.php: Delete old
	code for external downloads.

2013-09-18  SAncho lerena <sleren2artica.es>

	* godmode/setup/setup_mail.php: Delete mail queue code 
	was missing ¿?: Added again.

2013-09-18  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/export_csv.php,
	  operation/contacts/contact_activity.php,
	  operation/contacts/contact_detail.php,
	  operation/contacts/contact_export.php,
	  operation/contacts/contact_files.php,
	  operation/contacts/contact_incidents.php,
	  operation/contacts/contact_inventory.php,
	  operation/contacts/contact_manage.php,
	  operation/leads/lead.php,
	  operation/leads/lead_activity.php,
	  operation/leads/lead_detail.php,
	  operation/leads/lead_export.php,
	  operation/leads/lead_files.php,
	  operation/leads/lead_history.php,
	  operation/leads/lead_pipeline.php,
	  operation/leads/lead_statistics.php,