@@ -1,5 +1,16 @@
 2013-09-19  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
+	* include/functions_crm.php: Improved the functions
+	"crm_get_all_contracts" and "check_crm_acl".
+	
+	* operation/contacts/contact_detail.php,
+	  operation/contacts/contact_manage.php,
+	  operation/leads/lead_detail.php,
+	  operation/contracts/contract_detail.php: ACL fixes
+	  and improvements.
+	
+2013-09-19  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
 	* include/export_csv.php: ACL fixes.
 	
 	* include/functions_crm.php: Now the functions
